--- a/src/AppBundle/Resources/translations/admin-add-poll.fr.yml
+++ b/src/AppBundle/Resources/translations/admin-add-poll.fr.yml
@@ -9,7 +9,7 @@ poll:
     description: 'Description du sondage'
 
 page:
-  x_on_y: 'Page %x% sur %y%'
+  x_on_y: 'Page {x} sur {y}'
   insert:
     before: 'Insérer une page avant'
     after: 'Insérer une page après'
@@ -21,7 +21,7 @@ page:
     description: 'Description de la page'
 
 question:
-  x_on_y: 'Question %x% sur %y%'
+  x_on_y: 'Question {x} sur {y}'
   type: 'Type de la question'
   insert:
     before: 'Insérer une question avant'
@@ -35,12 +35,12 @@ proposition:
   add: 'Ajouter une proposition'
   variants:
     types:
-      CHECKBOX: 'Boutons à choix multiples'
-      RADIO: 'Boutons à choix unique'
-      LINEAR_SCALE: 'Échelle linéaire'
-    LINEAR_SCALE:
+      Checkbox: 'Boutons à choix multiples'
+      Radio: 'Boutons à choix unique'
+      LinearScale: 'Échelle linéaire'
+    LinearScale:
       to: 'à'
   default:
     title: ''
   placeholder:
-    proposition_x: 'Proposition n°%x%'
+    proposition_x: 'Proposition n°{x}'
