Changement du domaine 'admin-add-poll' en 'admin-poll' + ajout trad'
- poll.update
- poll.updating

--- a/src/AppBundle/Resources/translations/admin-poll.en.yml
+++ b/src/AppBundle/Resources/translations/admin-poll.en.yml
@@ -1,6 +1,8 @@
 poll:
   creation: 'Poll creation'
   create: 'Create the poll'
+  updating: 'Updating the poll'
+  update: 'Update the poll'
   default:
     title: 'Poll without title'
     description: ''
