--- a/src/AppBundle/Resources/translations/admin-poll.fr.yml
+++ b/src/AppBundle/Resources/translations/admin-poll.fr.yml
@@ -1,6 +1,8 @@
-poll: 
+poll:
   creation: 'Création d''un sondage'
   create: 'Créer le sondage'
+  updating: 'Modification du sondage'
+  update: 'Modifier le sondage'
   default:
     title: 'Sondage sans titre'
     description: ''
