--- a/src/AppBundle/Resources/translations/admin-poll.fr.yml
+++ b/src/AppBundle/Resources/translations/admin-poll.fr.yml
@@ -12,9 +12,7 @@ poll:
 
 page:
   x_on_y: 'Page {x} sur {y}'
-  insert:
-    before: 'Insérer une page avant'
-    after: 'Insérer une page après'
+  insert: 'Insérer une page'
   default:
     title: 'Page sans titre'
     description: ''
@@ -25,9 +23,7 @@ page:
 question:
   x_on_y: 'Question {x} sur {y}'
   type: 'Type de la question'
-  insert:
-    before: 'Insérer une question avant'
-    after: 'Insérer une question après'
+  insert: 'Insérer une question ici'
   default:
     title: 'Question sans titre'
   placeholder:
