--- a/src/AppBundle/Resources/translations/FOSUserBundle.fr.yml
+++ b/src/AppBundle/Resources/translations/FOSUserBundle.fr.yml
@@ -14,3 +14,5 @@ resetting:
     title: 'Mot de passe oublié'
     text: 'Demandez un nouveau mot de passe'
     username: 'Adresse e-mail'
+update_profile: 'Modifier mon profil'
+update_password: 'Modifier mon mot de passe'
