--- a/src/AppBundle/Resources/translations/admin-poll.en.yml
+++ b/src/AppBundle/Resources/translations/admin-poll.en.yml
@@ -8,7 +8,7 @@ poll:
     description: ''
   placeholder:
     title: 'Poll''s title (required)'
-    description: 'Poll''s description'
+    description: 'Poll''s description (required)'
 
 page:
   x_on_y: 'Page {x} on {y}'
