AdminInterface: refacto + fix boutons/LinearScale + opti DeletionService
- Refacto : partie VueJS, suppression de méthodes et d'events, ajout de commentaires,
- Fix boutons : les boutons pour ajouter une page ou question (X) se situe désormais uniquement à la fin de la liste  X
- Fix LinearScale : les problèmes concernant les LinearScale sont réglés (quand on switch de variante, on avait des résultats indésirés)
- Opti DeletionService : on stock les repositories en mémoire au lieu d'aller les chercher à chaque fois

--- a/src/AppBundle/Resources/translations/admin-poll.en.yml
+++ b/src/AppBundle/Resources/translations/admin-poll.en.yml
@@ -9,7 +9,7 @@ poll:
 
 page:
   x_on_y: 'Page {x} on {y}'
-  insert: 'Insert a page here'
+  add: 'Add a page'
   placeholder:
     title: 'Page''s title (required)'
     description: 'Page''s description'
@@ -17,7 +17,7 @@ page:
 question:
   x_on_y: 'Question {x} on {y}'
   type: 'Question''s type'
-  insert: 'Insert a question here'
+  add: 'Add a question'
   placeholder:
     title: 'Question''s title (required)'
 
