--- a/src/AppBundle/Resources/translations/FOSUserBundle.en.yml
+++ b/src/AppBundle/Resources/translations/FOSUserBundle.en.yml
@@ -16,4 +16,5 @@ layout:
   logged_in_as: 'Logged in as %username%'
 
 update_profile: 'Update my profile'
-update_password: 'Update my password'
+update_password: 'Update my password'delete_account: 'Delete my account'
+delete_account: 'Delete my account'
