Ajout de lien vers l'accueil

--- a/src/AppBundle/Resources/translations/sidebar.fr.yml
+++ b/src/AppBundle/Resources/translations/sidebar.fr.yml
@@ -1,4 +1,4 @@
-homepage: 'Accueil'
+homepage: 'Accueil Backoffice'
 add_poll: 'Ajouter un sondage'
 polls_list: 'Liste des sondages'
 users_list: 'Liste des utilisateurs'
