--- a/src/AppBundle/Resources/translations/AppBundle.en.yml
+++ b/src/AppBundle/Resources/translations/AppBundle.en.yml
@@ -9,11 +9,11 @@ admin_poll:
   table:
     title: 'Title'
     author: 'Author'
-    is_published: 'Published?'
+    state: 'State'
 
   table_values:
-    yes: 'Yes'
-    no: 'No'
+    published: 'Published'
+    not_published: 'Not published'
     edit: 'Edit'
     publish: 'Publish'
     publish_confirmation: 'Do you really want to publish this poll?\n\nIt will be impossible to un-publish it later.'
