Add a message if the poll have no answer + design export excel

--- a/src/AppBundle/Resources/translations/AppBundle.fr.yml
+++ b/src/AppBundle/Resources/translations/AppBundle.fr.yml
@@ -4,6 +4,7 @@ return_to_homepage: 'Retour à l''accueil'
 admin_poll:
   polls_list: 'Liste des sondages'
   poll_results: 'Résultats du sondage'
+  poll_results_no_answers: 'Ce sondage n''a pas encore reçu de réponse.'
   create_poll: 'Créer un sondage'
 
   table:
