--- a/src/AppBundle/Resources/translations/AppBundle.en.yml
+++ b/src/AppBundle/Resources/translations/AppBundle.en.yml
@@ -14,6 +14,7 @@ admin_poll:
     title: 'Title'
     author: 'Author'
     state: 'State'
+    created_at: 'Created at'
 
   table_values:
     published: 'Published'
