--- a/src/AppBundle/Resources/translations/AppBundle.fr.yml
+++ b/src/AppBundle/Resources/translations/AppBundle.fr.yml
@@ -14,6 +14,7 @@ admin_poll:
     title: 'Titre'
     author: 'Auteur'
     state: 'Etat'
+    created_at: 'Créé le'
 
   table_values:
     published: 'Publié'
