--- a/src/AppBundle/Resources/translations/AppBundle.fr.yml
+++ b/src/AppBundle/Resources/translations/AppBundle.fr.yml
@@ -98,7 +98,7 @@ front:
           2: '<p>Pour que votre sondage soit <strong>valide</strong> vous devrez fournir un <strong>titre</strong>, une <strong>description globale</strong> ainsi qu''un <strong>titre par page</strong>.</p>
           <p>Pour chaque <strong>question</strong> vous devrez renseigner son <strong>intitulé</strong>. Ensuite vous aurez le choix entre plusieurs <strong>types de questions</strong> et de <strong>diagrammes</strong>.</p>
           <br><i class="fa fa-info-circle" aria-hidden="true"></i> Une proposition correspond à l''intitulé de la réponse.</p>'
-          3: '<p>Vous avez le choix entre <strong>3 types</strong> de question&nbsp;:</p><ul><li>Question à <strong>choix unique</strong></li><li>question à <strong>choix multiple</strong></li><li>Question <strong>quantitative</strong></li></ul>
+          3: '<p>Vous avez le choix entre <strong>3 types</strong> de question&nbsp;:</p><ul><li>Question à <strong>choix unique</strong></li><li>Question à <strong>choix multiple</strong></li><li>Question <strong>quantitative</strong></li></ul>
           <p>Dans le cas d''une question quantitative vous devez renseigner la <strong>valeur de départ</strong> et la <strong>valeur de fin</strong> (chaque valeur sera une proposition).</p>
           <p>Le <strong>choix du diagramme</strong> vous permet de définir le <strong>rendu utilisé</strong> lors de la visualisation des réponses.</p>'
           4: '<p>Pour <strong>partager</strong> votre sondage vous avez le choix entre plusieurs méthodes&nbsp;:</p>
