Made softdeletable filter care about actual date

--- a/src/AppBundle/Resources/translations/AppBundle.fr.yml
+++ b/src/AppBundle/Resources/translations/AppBundle.fr.yml
@@ -15,6 +15,8 @@ admin_poll:
     author: 'Auteur'
     state: 'Etat'
     created_at: 'Créé le'
+    updated_at: 'Dernière mise à jour'
+    deleted_at: 'Date d''archivage'
 
   table_values:
     published: 'Publié'
